; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_txtrange.c_string_to_nscmptype.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_txtrange.c_string_to_nscmptype.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@string_to_nscmptype.seW = internal constant [11 x i8] c"StartToEnd\00", align 1
@string_to_nscmptype.ssW = internal constant [13 x i8] c"StartToStart\00", align 1
@string_to_nscmptype.esW = internal constant [11 x i8] c"EndToStart\00", align 1
@string_to_nscmptype.eeW = internal constant [9 x i8] c"EndToEnd\00", align 1
@NS_START_TO_END = common dso_local global i32 0, align 4
@NS_START_TO_START = common dso_local global i32 0, align 4
@NS_END_TO_START = common dso_local global i32 0, align 4
@NS_END_TO_END = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @string_to_nscmptype to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @string_to_nscmptype(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = call i32 @strcmpiW(i32 %4, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @string_to_nscmptype.seW, i64 0, i64 0))
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %9, label %7

7:                                                ; preds = %1
  %8 = load i32, i32* @NS_START_TO_END, align 4
  store i32 %8, i32* %2, align 4
  br label %28

9:                                                ; preds = %1
  %10 = load i32, i32* %3, align 4
  %11 = call i32 @strcmpiW(i32 %10, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @string_to_nscmptype.ssW, i64 0, i64 0))
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %15, label %13

13:                                               ; preds = %9
  %14 = load i32, i32* @NS_START_TO_START, align 4
  store i32 %14, i32* %2, align 4
  br label %28

15:                                               ; preds = %9
  %16 = load i32, i32* %3, align 4
  %17 = call i32 @strcmpiW(i32 %16, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @string_to_nscmptype.esW, i64 0, i64 0))
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %21, label %19

19:                                               ; preds = %15
  %20 = load i32, i32* @NS_END_TO_START, align 4
  store i32 %20, i32* %2, align 4
  br label %28

21:                                               ; preds = %15
  %22 = load i32, i32* %3, align 4
  %23 = call i32 @strcmpiW(i32 %22, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @string_to_nscmptype.eeW, i64 0, i64 0))
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %27, label %25

25:                                               ; preds = %21
  %26 = load i32, i32* @NS_END_TO_END, align 4
  store i32 %26, i32* %2, align 4
  br label %28

27:                                               ; preds = %21
  store i32 -1, i32* %2, align 4
  br label %28

28:                                               ; preds = %27, %25, %19, %13, %7
  %29 = load i32, i32* %2, align 4
  ret i32 %29
}

declare dso_local i32 @strcmpiW(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
